3chapter/variables-and-mutability/immutable-reassignment-fails-compiler-error.log
error[E0384]: cannot assign twice to immutable variable `x`
 --> immutable-reassignment-fails.rs:4:5
  |
2 |     let x = 5;
  |         -
  |         |
  |         first assignment to `x`
  |         help: make this binding mutable: `mut x`
3 |     println!("The value of x is: {}", x);
4 |     x = 6;
  |     ^^^^^ cannot assign twice to immutable variable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0384`.
